# netboost-pro

./: PRD.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: devguid.md  phase3.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  build_log.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: interface_manager.rs  lib.rs  main.rs  packet_router.rs  performance_monitor.rs  virtual_adapter.rs
src/components/: NetBoostDashboard.tsx
