[package]
name = "netboost-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "netboost_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
chrono = "0.4.41"
tauri-build = { version = "2", features = [] }

[features]
default = ["gui"]
gui = ["tauri", "tauri-plugin-opener"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tun = { package = "tun-rs", version = "2.5.7", features = ["async_tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.98"
pnet_datalink = "0.34.0"
pnet_packet = "0.34.0"
clap = { version = "4.5.4", features = ["derive"] }
net-route = "0.2.0"

# GUI specific dependencies
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
env_logger = "0.11.8"
chrono = "0.4.41"

